--- a/Snacktacular/Info.plist
+++ b/Snacktacular/Info.plist
@@ -52,5 +52,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Snacktacular needs access to the device location in ordder to show this in a map.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Snacktacular needs access to the device location in ordder to show this in a map.</string>
 </dict>
 </plist>
